--- a/src/App.css
+++ b/src/App.css
@@ -12,3 +12,110 @@
   box-shadow: 0 2px 12px rgba(0, 0, 0, 0.2);
   border-radius: 10px;
 }
+
+h4{
+  font-size: 1.25rem;
+}
+
+h5{
+  font-size: 1rem;
+}
+.button {
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
+
+.post-content{
+  position: absolute;
+  /*top: 50%;*/
+  left: 40%;
+  /*width: 500px;*/
+  /*height: 300px;*/
+  margin-left: -250px;
+  /*margin-top: -150px;*/
+
+}
+
+.post-list {
+  display: flex;
+}
+
+.post-list-el {
+  width: 500px;
+}
+
+.post-list button {
+  margin: 0 3rem;
+  height: fit-content;
+  align-self: center;
+}
+
+/* The Modal (background) */
+.modal {
+  display: block; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content/Box */
+.modal-content {
+  background-color: #fefefe;
+  margin: 15% auto; /* 15% from the top and centered */
+  padding: 20px 20px 80px;
+  border: 1px solid #888;
+  width: 80%; /* Could be more or less, depending on screen size */
+}
+
+.modal-content h5{
+  margin-bottom: 4px;
+}
+/* The Close Button */
+.btn-modal {
+  color: #aaa;
+  float: right;
+  font-size: 18px;
+  font-weight: bold;
+  margin-left: 10px;
+  margin-top: 10px;
+}
+
+.input-modal {
+  width: 100%;
+  /*height: 150px;*/
+  padding: 12px 20px;
+  box-sizing: border-box;
+  border: 2px solid #ccc;
+  border-radius: 4px;
+  background-color: #f8f8f8;
+  resize: none;
+}
+
+.input-modal_title{
+  height: 50px;
+}
+
+.input-modal_content{
+  height: 150px;
+}
+
+.input-modal_action{
+  margin-bottom: 4px;
+}
+.close:hover,
+.close:focus {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
+}
+
